objects/Network_Information__c/Network_Information__c.object-meta.xml
<CustomObject>
    <label>Network Information</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Network ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Network Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>