objects/Network_Information__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>BeeLine</fullName>
            </value>
            <value>
                <fullName>CallOne</fullName>
            </value>
            <value>
                <fullName>Comcast</fullName>
            </value>
            <value>
                <fullName>Cox Business</fullName>
            </value>
            <value>
                <fullName>FairPoint</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Lightpath</fullName>
            </value>
            <value>
                <fullName>Optimum</fullName>
            </value>
            <value>
                <fullName>verizon</fullName>
                <label>Verizon</label>
            </value>
            <value>
                <fullName>Zayo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>