objects/Network_Information__c/fields/Firewall_Asset__c.field-meta.xml
<CustomField>
    <fullName>Firewall_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firewall Asset</label>
    <referenceTo>Asset_Assignment__c</referenceTo>
    <relationshipLabel>Network Information</relationshipLabel>
    <relationshipName>Network_Information</relationshipName>
    <type>Lookup</type>
</CustomField>