objects/Network_Information__c/fields/LAN_URL__c.field-meta.xml
<CustomField>
    <fullName>LAN_URL__c</fullName>
    <formula>'https://' +  LAN_IP__c + ':444'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LAN URL</label>
    <type>Text</type>
</CustomField>