objects/Network_Information__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>Speed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>