objects/Network_Information__c/fields/Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Support_Phone__c</fullName>
    <label>Support Phone</label>
    <type>Phone</type>
</CustomField>