objects/Network_Information__c/fields/WAN_GW__c.field-meta.xml
<CustomField>
    <fullName>WAN_GW__c</fullName>
    <label>WAN GW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>