objects/Network_Information__c/fields/WAN_IP__c.field-meta.xml
<CustomField>
    <fullName>WAN_IP__c</fullName>
    <label>WAN IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>