objects/Network_Information__c/fields/WAN_NM__c.field-meta.xml
<CustomField>
    <fullName>WAN_NM__c</fullName>
    <label>WAN NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>