objects/Network_Information__c/fields/WAN_URL__c.field-meta.xml
<CustomField>
    <fullName>WAN_URL__c</fullName>
    <formula>'https://' +  WAN_IP__c + ':444'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WAN URL</label>
    <type>Text</type>
</CustomField>