objects/Network_Information__c/fields/WebSite__c.field-meta.xml
<CustomField>
    <fullName>WebSite__c</fullName>
    <label>WebSite</label>
    <type>Url</type>
</CustomField>