objects/Network_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Firewall_Asset__c</columns>
    <columns>WAN_IP__c</columns>
    <columns>Carrier__c</columns>
    <columns>Status__c</columns>
    <columns>Speed__c</columns>
    <columns>LAN_IP__c</columns>
    <columns>LAN_URL__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>